--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  mongo_dart: ^0.7.4
   http: ^0.13.4
+  file_picker: ^4.5.1
 
 dev_dependencies:
   flutter_test:
