--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   http: ^0.13.4
   file_picker: ^4.5.1
   uuid: ^3.0.6
+  firebase_storage: ^10.2.14
+  firebase_core: ^1.15.0
+  glassmorphism: ^3.0.0
+  google_fonts: ^3.0.1
+  flutter_rating_bar: ^4.0.1
+  flutter_pdfview: ^1.2.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
