--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_pdfview: ^1.2.3
   path_provider: ^2.0.11
+  razorpay_flutter: ^1.3.4
 
 dev_dependencies:
   flutter_test:
