--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   firebase_storage: ^10.2.14
   firebase_core: ^1.15.0
   glassmorphism: ^3.0.0
+  flutter_neumorphic: ^3.2.0
   google_fonts: ^3.0.1
+  persistent_bottom_nav_bar: ^5.0.2
   flutter_rating_bar: ^4.0.1
   flutter_pdfview: ^1.2.3
   path_provider: ^2.0.11
