--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,14 +42,10 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<key>LSApplicationQueriesSchemes</key>
-<array>
-	<string>tez</string>
-    <string>phonepe</string>
-    <string>paytmmp</string>
-</array>
-	<true/>
+	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
 </plist>
