--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  file_picker: ^4.5.1
+  file_picker: ^5.3.1
   uuid: ^3.0.6
-  firebase_storage: ^10.2.14
-  firebase_core: ^1.15.0
+  firebase_storage: ^11.2.1
+  syncfusion_flutter_pdfviewer: ^20.4.44
+  firebase_core: ^2.13.0
   glassmorphism: ^3.0.0
-  flutter_neumorphic: ^3.2.0
-  google_fonts: ^3.0.1
+  flutter_neumorphic: 
+    git:
+      url: https://github.com/den0206/Flutter-Neumorphic.git
+      ref: feature/remoce_accentcolor
+  google_fonts: ^4.0.4
   persistent_bottom_nav_bar: ^5.0.2
   flutter_rating_bar: ^4.0.1
   flutter_pdfview: ^1.2.3
@@ -56,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
