--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   uuid: ^3.0.6
   firebase_storage: ^11.2.1
   syncfusion_flutter_pdfviewer: ^20.4.44
+  shared_preferences: ^2.1.1
+  flutter_speed_dial: ^7.0.0
   firebase_core: ^2.13.0
   glassmorphism: ^3.0.0
   flutter_neumorphic: 
@@ -48,6 +50,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   flutter_rating_bar: ^4.0.1
   flutter_pdfview: ^1.2.3
+  translator: ^0.1.7
   path_provider: ^2.0.11
   razorpay_flutter: ^1.3.4
 
