--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,11 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   flutter_rating_bar: ^4.0.1
   flutter_pdfview: ^1.2.3
+  flutter_spinkit: ^5.2.0
+  provider: ^6.0.5
   translator: ^0.1.7
   path_provider: ^2.0.11
+  animated_text_kit: ^4.2.2
   razorpay_flutter: ^1.3.4
 
 dev_dependencies:
